[metadata]
name = load-plugins
version = 0.1.0.dev0
author = Marc Mueller
description = Provide interface to load custom Python plugins
long_description = file:README.md
long_description_content_type = text/markdown
keywords = plugins,dynamic-load
license = MIT
license_files =
    LICENSE
    AUTHORS
url = https://github.com/cdce8p/load-plugins
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development

[options]
package_dir =
    = src
py_modules = load_plugins
python_requires = >=3.7
install_requires =
    tomli>=1.1.0,<3.0
